--- a/index.html
+++ b/index.html
@@ -267,9 +267,30 @@
             </div>
         </div>
       
-
+       
     </div>
+  
+</div>
+<div class="link1">
+    <a href="url">Check all testimonials</a>
+</div>
 
+<div class="images">
+    <div>
+        <img src="images/Object.png" alt="">
+    </div>
+    <div class="ob">
+        <img src="images/Object1.png" alt=""> 
+    </div>
+    <div class="ob">
+        <img src="images/Object2.png" alt="">
+    </div>
+    <div class="ob">
+        <img src="images/Object3.png" alt="">
+    </div>
+    <div class="ob">
+        <img src="images/Object4.png" alt=""> 
+    </div>
 </div>
 
 
