--- a/index.html
+++ b/index.html
@@ -326,6 +326,10 @@ FAQs -->
         Do I have to download special software?
         <img class="down-arrow" src="images/triangle1.png" alt="submit" />
     </div>
+   
+</div>
+<div class="but-fa">
+    <button class="but-1">More FAQs</button>
 </div>
 
 </body>
