--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@
                 </div>
                 <div class="subscribeInput" >
                     <!-- <input /> -->
-                    find out more
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSjhFKE3mHgUvFy1M19ReQf508iTjgMhtlh-g&usqp=CAU" alt="submit" />
+                    Find out more
+                    <img src="images/tail-right.png" alt="submit" />
                 </div>
             </div>
             <div class="manage-section2">
