--- a/index.html
+++ b/index.html
@@ -332,6 +332,93 @@ FAQs -->
     <button class="but-1">More FAQs</button>
 </div>
 
+
+                           <!----------------------------- footer1---------------------------------- -->
+                           <div class="footer1">
+
+
+                            <div class="footersub">
+                                <div>
+                                    Company
+                                </div>
+                                <div>
+                                    About Tyto app.com
+                                </div>
+                                <div>
+                                    Contact Us
+                                </div>
+
+                            </div>
+
+
+                            <div class="footer1sub">
+                                <div>
+                                    Tutor
+                                </div>
+                                <div>
+                                    Become a tutor
+                                </div>
+                                <div>
+                                    How it’s works
+                                </div>
+                                <div>
+                                    FAQs
+                                </div>
+
+                            </div>
+
+
+                            <div class="footer1sub">
+                                <div>
+                                    Help
+                                </div>
+                                <div>
+                                    Support
+                                </div>
+                                <div>
+                                    FAQs
+                                </div>
+
+                                <div>
+                                    Terms and conditions
+                                </div>
+                                <div>
+                                    Privacy Policy
+                                </div>
+
+                            </div>
+                            <div class="footer1sub">
+
+                          
+                            <div>
+                           <div>
+                            Follow us @ 
+                           </div>
+                           <div>
+                            #Btutor
+                           </div>
+                            </div>
+
+
+
+
+                            <div class="footer1sub-images">
+
+                                <img class="footer-icons" src="images/icon1.png" alt="submit" />
+                                <img class="footer-icons" src="images/icon2.png" alt="submit" />
+                                <img class="footer-icons" src="images/icon3.png" alt="submit" />
+                                <img class="footer-icons" src="images/icon4.png" alt="submit" />
+
+
+                            </div>
+
+
+                            <div>
+                             <button class="but3">Become a tutor now!</button>
+                            </div>
+
+                           </div>
+
 </body>
 
 </html>
