--- a/index.html
+++ b/index.html
@@ -338,13 +338,13 @@ FAQs -->
 
 
                             <div class="footersub">
-                                <div>
+                                <div class="footersubhead">
                                     Company
                                 </div>
-                                <div>
+                                <div class="footersubs">
                                     About Tyto app.com
                                 </div>
-                                <div>
+                                <div class="footersubs">
                                     Contact Us
                                 </div>
 
@@ -352,16 +352,16 @@ FAQs -->
 
 
                             <div class="footer1sub">
-                                <div>
+                                <div class="footersubhead">
                                     Tutor
                                 </div>
-                                <div>
+                                <div class="footersubs">
                                     Become a tutor
                                 </div>
-                                <div>
+                                <div class="footersubs">
                                     How it’s works
                                 </div>
-                                <div>
+                                <div class="footersubs">
                                     FAQs
                                 </div>
 
@@ -369,34 +369,36 @@ FAQs -->
 
 
                             <div class="footer1sub">
-                                <div>
+                                <div class="footersubhead">
                                     Help
                                 </div>
-                                <div>
+                                <div class="footersubs">
                                     Support
                                 </div>
-                                <div>
+                                <div class="footersubs">
                                     FAQs
                                 </div>
 
-                                <div>
+                                <div class="footersubs">
                                     Terms and conditions
                                 </div>
-                                <div>
+                                <div class="footersubs">
                                     Privacy Policy
                                 </div>
 
                             </div>
-                            <div class="footer1sub">
+                            <div class="footer1subb">
 
                           
-                            <div>
-                           <div>
-                            Follow us @ 
-                           </div>
-                           <div>
-                            #Btutor
-                           </div>
+                            <div class="footer1sub-2">
+                                <div class="footerr">
+                                    <div class="footersubhead">
+                                        Follow us @ 
+                                       </div>
+                                       <div>
+                                        #Btutor
+                                       </div>
+                                </div>
                             </div>
 
 
@@ -413,7 +415,7 @@ FAQs -->
                             </div>
 
 
-                            <div>
+                            <div class="footersubs">
                              <button class="but3">Become a tutor now!</button>
                             </div>
 
