--- a/index.html
+++ b/index.html
@@ -421,6 +421,18 @@ FAQs -->
 
                            </div>
 
+                           </div>
+
+
+                           <div class="footer2">
+                            <div>
+                                © 2021 Btutor.com  All rights reserved.
+                            </div>
+                            <div class="footer2sub">
+                                Made in USA
+                            </div>
+                           </div>
+
 </body>
 
 </html>
