--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
         <br>
         <div class="home">
             <div class="home-1">
-                <div>
+                <div class="tri1">
                     <img src="images/triangle.png" class="img1">
 
                 </div>
-                <div>
+                <div class="line1">
                     <img src="images/line.png" class="img2">
                 </div>
             </div>
