--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                     </div>
                 </div>
                 <div class="img8">
-                    <img src="images/cardgirl.png" alt="">
+                    <img class="imgres1" src="images/cardgirl.png" alt="">
                 </div>
 
 
@@ -276,7 +276,7 @@
 </div>
 
 <div class="images">
-    <div>
+    <div class="ob">
         <img src="images/Object.png" alt="">
     </div>
     <div class="ob">
